--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1209,7 +1209,7 @@ footer{
 
         .container{
             margin-top: 90px;
-            width: 92%;
+            width: 95%;
             margin: 100px auto 0 auto;   
             
             .logo-footer{
@@ -1238,10 +1238,193 @@ footer{
                     h2{
                         font-size: 50px;
                         margin-bottom: 20px;
+                        color: #ffffff;
                     }
 
                     p{
                         color: #ccc;
+                        margin-bottom: 20px;
+                    }
+
+                    button {
+                        margin: 0 0 20px 0;
+                        position: relative;
+                        border-radius: 20px;
+                        background: #444;
+                        color: #fff;
+                        text-decoration: none;
+                        text-transform: uppercase;
+                        border: none;
+                        letter-spacing: 0.1rem;
+                        font-size: 1rem;
+                        padding: 1rem 3rem;
+                        transition: 0.2s;
+
+                        &:hover{
+                            letter-spacing: 0.2rem;
+                            padding: 1.1rem 3.1rem;
+                            background: var(--clr);
+                            color: var(--clr);
+                            /* box-shadow: 0 0 35px var(--clr); */
+                            animation: box 3s infinite;
+
+                            i::before{
+                                width: 15px;
+                                left: 20%;
+                                animation: move 3s infinite;
+                            }
+
+                            i::after{
+                                width: 15px;
+                                left: 80%;
+                                animation: move 3s infinite;
+                            }
+                        }
+
+                        &::before{
+                            content: "";
+                            position: absolute;
+                            border-radius: 20px;
+                            inset: 2px;
+                            background: #282322;
+
+                            
+                        }
+
+                        span{
+                            position: relative;
+                            z-index: 1;
+                        }
+
+                        i{
+                            position: absolute;
+                            inset: 0;
+                            display: block;
+
+                            &::before{
+                                content: "";
+                                position: absolute;
+                                width: 10px;
+                                height: 2px;
+                                left: 80%;
+                                top: -2px;
+                                border: 2px solid var(--clr);
+                                background: #272822;
+                                transition: 0.2s;
+                            }
+
+                            &::after{
+                                content: "";
+                                position: absolute;
+                                width: 10px;
+                                height: 2px;
+                                left: 20%;
+                                bottom: -2px;
+                                border: 2px solid var(--clr);
+                                background: #272822;
+                                transition: 0.2s;
+                            }
+                        }
+
+                        @keyframes move {
+                            0% {
+                              transform: translateX(0);
+                            }
+                            50% {
+                              transform: translateX(5px);
+                            }
+                            100% {
+                              transform: translateX(0);
+                            }
+                          }
+                          
+                          @keyframes box {
+                            0% {
+                              box-shadow: #27272c;
+                            }
+                            50% {
+                              box-shadow: 0 0 25px var(--clr);
+                            }
+                            100% {
+                              box-shadow: #27272c;
+                            }
+                          }
+                    }
+                    
+                    a{
+                        color: #ffffff;
+                        font-size: 24px;
+                        text-decoration: none;
+
+                    }
+                }
+                .footer__box-right{
+                    float: left;
+                    width: 56%;
+
+                    .footer__navs{
+                        .nav-col{
+                            max-width: 192px;
+                            float: left;
+                            margin-right: 15%;
+
+                            h3{
+                                font-size: 20px;
+                                margin-bottom: 20px;
+                                color: #f8f8f8;
+                            }
+
+                            ul{
+                                li{
+                                    font-size: 18px;
+                                    color: #f8f8f8;
+                                    margin-bottom: 15px;
+                                    a{
+                                        text-decoration: none;
+                                        color: #f8f8f8;
+                                        font-size: 20px; 
+                                        i{
+                                            float: right;
+                                            margin-left: 25px;
+                                        }
+                                    }
+                                    
+                                }
+                            }
+                        }
+                        .nav-col:nth-child(3){
+                            margin-right: 0;
+                            float: right;
+                            ul{
+                                li{
+                                    
+                                }
+                                
+                            }
+                        }
+                    }
+                }
+                .footer__end{
+                    width: 100%;
+                    float: left;
+                    margin-top: 70px;
+
+                    p{
+                        color: #ccc;
+
+                        a{
+                            
+                            color: #c2c2c2;
+                        }
+                    }
+
+                    .btn-totop{  
+                        float: right;
+                        text-decoration: none;
+                        color: #c2c2c2;
+                        &:hover{
+                            color:rgb(233, 210, 0);
+                        }
                     }
                 }
             }
