--- a/sass/style.scss
+++ b/sass/style.scss
@@ -70,7 +70,7 @@ header{
 
         .menu{
             width: 100%;
-            height: 90px;
+            height: 70px;
             background-color: rgba(117, 117, 117, 0.438);
             position: fixed;
             top: 0;
@@ -136,7 +136,7 @@ header{
 
         .menu{
             width: 100%;
-            height: 90px;
+            height: 70px;
             background-color: rgba(117, 117, 117, 0.438);
             position: fixed;
             top: 0;
@@ -1204,17 +1204,16 @@ footer{
     @include mqu(large){
         width: 100%;
         float: left;
-        height: 100vh;
+        //height: 90vh;
         background-color: #700e07;
 
         .container{
-            margin-top: 90px;
-            width: 95%;
-            margin: 100px auto 0 auto;   
+            width: 88%;
+            margin: 8% auto 0 auto;   
             
             .logo-footer{
                 width: 100%;
-                margin-bottom: 70px;
+                margin-bottom: 5%;
 
                 i{
                     font-size: 24px;
@@ -1232,7 +1231,7 @@ footer{
             .footer-wrapper{
 
                 .footer__box-left{
-                    max-width: 550px;
+                    max-width: 35%;
                     float: left;
 
                     h2{
@@ -1360,7 +1359,241 @@ footer{
                 }
                 .footer__box-right{
                     float: left;
-                    width: 56%;
+                    width: 60%;
+                    margin-left: 5%;
+
+                    .footer__navs{
+                        .nav-col{
+                            max-width: 25%;
+                            float: left;
+                            margin-right: 15%;
+
+                            h3{
+                                font-size: 20px;
+                                margin-bottom: 20px;
+                                color: #f8f8f8;
+                            }
+
+                            ul{
+                                li{
+                                    font-size: 18px;
+                                    color: #f8f8f8;
+                                    margin-bottom: 15px;
+                                    a{
+                                        text-decoration: none;
+                                        color: #f8f8f8;
+                                        font-size: 20px; 
+                                        i{
+                                            float: right;
+                                            margin-left: 25px;
+                                        }
+                                    }
+                                    
+                                }
+                            }
+                        }
+                        .nav-col:nth-child(3){
+                            margin-right: 0;
+                            float: right;
+                            ul{
+                                li{
+                                    
+                                }
+                                
+                            }
+                        }
+                    }
+                }
+                .footer__end{
+                    width: 100%;
+                    float: left;
+                    margin-top: 70px;
+                    margin-bottom: 70px;
+
+                    p:nth-child(1){
+                        color: #ccc;
+                        float: left;
+                        a{
+                            
+                            color: #c2c2c2;
+                        }
+                    }
+
+                    .btn-totop{  
+                        float: right;
+                        text-decoration: none;
+                        color: #c2c2c2;
+                        &:hover{
+                            color:rgb(233, 210, 0);
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    @include mqd(1000){
+        width: 100%;
+        float: left;
+        //height: 100vh;
+        background-color: #700e07;
+
+        .container{
+            margin-top: 90px;
+            width: 95%;
+            margin: 100px auto 0 auto;   
+            
+            .logo-footer{
+                width: 100%;
+                margin-bottom: 70px;
+
+                i{
+                    font-size: 24px;
+                    color: #ffebeb;
+                    margin-right: 10px;
+                }
+
+                a{
+                    color: #ffebeb;
+                    font-size: 26px;
+
+                }
+            }
+
+            .footer-wrapper{
+
+                .footer__box-left{
+                    max-width: 100%;
+                    float: left;
+                    margin-bottom: 50px;
+
+                    h2{
+                        font-size: 50px;
+                        margin-bottom: 20px;
+                        color: #ffffff;
+                    }
+
+                    p{
+                        color: #ccc;
+                        margin-bottom: 20px;
+                    }
+
+                    button {
+                        margin: 0 0 20px 0;
+                        position: relative;
+                        border-radius: 20px;
+                        background: #444;
+                        color: #fff;
+                        text-decoration: none;
+                        text-transform: uppercase;
+                        border: none;
+                        letter-spacing: 0.1rem;
+                        font-size: 1rem;
+                        padding: 1rem 3rem;
+                        transition: 0.2s;
+
+                        &:hover{
+                            letter-spacing: 0.2rem;
+                            padding: 1.1rem 3.1rem;
+                            background: var(--clr);
+                            color: var(--clr);
+                            /* box-shadow: 0 0 35px var(--clr); */
+                            animation: box 3s infinite;
+
+                            i::before{
+                                width: 15px;
+                                left: 20%;
+                                animation: move 3s infinite;
+                            }
+
+                            i::after{
+                                width: 15px;
+                                left: 80%;
+                                animation: move 3s infinite;
+                            }
+                        }
+
+                        &::before{
+                            content: "";
+                            position: absolute;
+                            border-radius: 20px;
+                            inset: 2px;
+                            background: #282322;
+
+                            
+                        }
+
+                        span{
+                            position: relative;
+                            z-index: 1;
+                        }
+
+                        i{
+                            position: absolute;
+                            inset: 0;
+                            display: block;
+
+                            &::before{
+                                content: "";
+                                position: absolute;
+                                width: 10px;
+                                height: 2px;
+                                left: 80%;
+                                top: -2px;
+                                border: 2px solid var(--clr);
+                                background: #272822;
+                                transition: 0.2s;
+                            }
+
+                            &::after{
+                                content: "";
+                                position: absolute;
+                                width: 10px;
+                                height: 2px;
+                                left: 20%;
+                                bottom: -2px;
+                                border: 2px solid var(--clr);
+                                background: #272822;
+                                transition: 0.2s;
+                            }
+                        }
+
+                        @keyframes move {
+                            0% {
+                              transform: translateX(0);
+                            }
+                            50% {
+                              transform: translateX(5px);
+                            }
+                            100% {
+                              transform: translateX(0);
+                            }
+                          }
+                          
+                          @keyframes box {
+                            0% {
+                              box-shadow: #27272c;
+                            }
+                            50% {
+                              box-shadow: 0 0 25px var(--clr);
+                            }
+                            100% {
+                              box-shadow: #27272c;
+                            }
+                          }
+                    }
+                    
+                    a{
+                        color: #ffffff;
+                        font-size: 24px;
+                        text-decoration: none;
+
+                    }
+                }
+                .footer__box-right{
+                    float: left;
+                    width: 100%;
+                    margin-left: 0;
 
                     .footer__navs{
                         .nav-col{
@@ -1407,11 +1640,12 @@ footer{
                 .footer__end{
                     width: 100%;
                     float: left;
-                    margin-top: 70px;
+                    margin-top: 50px;
+                    margin-bottom: 70px;
 
-                    p{
+                    p:nth-child(1){
                         color: #ccc;
-
+                        float: left;
                         a{
                             
                             color: #c2c2c2;
@@ -1429,5 +1663,97 @@ footer{
                 }
             }
         }
+    }
+
+    @include mqd(820){
+        .container{
+            margin-top: 30px;
+
+            .logo-footer{
+            margin-top: 80px;
+            margin-bottom: 30px;
+
+            }
+
+            .footer-wrapper{
+
+                .footer__box-left{
+                    width: 100%;
+
+                    h2{
+                        font-size: 38px;
+                        margin-bottom: 40px;
+                    }
+                    p, a{
+                        display: none;
+                    }
+
+                    button{
+                        width: 100%;
+                    }
+                }
+
+                .footer__box-right{
+                    .footer__navs{
+                        .nav-col{
+                            width: 24%;
+                            margin-right: 10%;
+
+                            h3{
+                                font-size: 16px;
+                            }
+
+                            ul{
+                                li{
+                                    font-size: 14px;
+                                    a{
+                                        font-size: 16px;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    @include mqd(550){
+
+        .container{
+            .footer-wrapper{
+                .footer__box-left{
+                    margin-bottom: 30px;
+                }
+
+                .footer__box-right{
+                    .footer__navs{
+
+                        .nav-col{
+                            width: 40%;
+                        }
+
+                        .nav-col:nth-child(2){
+                            float: right;
+                            margin-right: 0;
+                        }
+
+                        .nav-col:nth-child(3){
+                            display: none;
+                        }
+                    }
+                }
+            }
+
+            .footer__end{
+                margin-top: 25px;
+
+                a:nth-child(2){
+                    float: left;
+                    width: 100%;
+                    margin-top: 20px;
+                }
+            }
+        }    
     }
 }
