hide menu e bugs

--- a/css/style.css
+++ b/css/style.css
@@ -761,7 +761,7 @@ header {
 @media (min-width: 992px) {
   section.fans-flash {
     width: 100%;
-    padding-bottom: 60px;
+    padding-top: 60px;
     padding-bottom: 60px;
     background-color: #f8f8f8;
     float: left;
