--- a/sass/style.scss
+++ b/sass/style.scss
@@ -867,7 +867,7 @@ section.gallery-flash{
 section.fans-flash{
     @include mqu(large){
         width: 100%;
-        padding-bottom: 60px;
+        padding-top: 60px;
         padding-bottom: 60px;
         background-color: #f8f8f8;
         float: left;
