--- a/css/style.css
+++ b/css/style.css
@@ -806,7 +806,7 @@ header {
     margin-right: 10px;
     position: relative;
     left: -5px;
-    color: #ccc;
+    color: #5e5e5e;
   }
   section.fans-flash .fans-flash__wrapper .fans-flash__quote .fans-flash__text p {
     font-size: 49px;
