--- a/sass/style.scss
+++ b/sass/style.scss
@@ -918,7 +918,7 @@ section.fans-flash{
                         margin-right: 10px;
                         position: relative;
                         left: -5px;
-                        color: #ccc;
+                        color: #5e5e5e;
                         
                     }
                     p{
